py.install_sources(
  '__init__.py',
  'bitops.py',
  'block.py',
  'boot.py',
  'bpf.py',
  'cgroup.py',
  'cpumask.py',
  'device.py',
  'fs.py',
  'idr.py',
  'kconfig.py',
  'kernfs.py',
  'list.py',
  'list_nulls.py',
  'llist.py',
  'mapletree.py',
  'mm.py',
  'module.py',
  'net.py',
  'nodemask.py',
  'percpu.py',
  'pid.py',
  'plist.py',
  'printk.py',
  'radixtree.py',
  'rbtree.py',
  'sched.py',
  'slab.py',
  'stackdepot.py',
  'tc.py',
  'tcp.py',
  'user.py',
  'wait.py',
  'xarray.py',
  subdir : 'drgn/helpers/linux',
)
